added some comments

--- a/index.html
+++ b/index.html
@@ -7,19 +7,25 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
+    <!-- Input element to take input from the users -->
     <input
       type="text"
       id="input-el"
       placeholder="Enter Username or Profile Url"
     />
-
+    <!-- button section  -->
+    <!--  Button to save user input as username      -->
     <button id="input-btn">Save Username</button>
+    <!--  Button to save tab url -->
     <button id="tab-btn">Save Tab Url</button>
+    <!--  Button to delete user inputs      -->
     <button id="delete-btn">DELETE ALL</button>
+    <!-- section containing usernames list     -->
     <section class="username">
       <h3>Usernames</h3>
       <ul id="ul-el"></ul>
     </section>
+    <!-- section containing user profile urls list     -->
     <section class="userurl">
       <h3>Profile Url</h3>
       <ul id="ul-el-2"></ul>
